--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ src="https://www.facebook.com/tr?id=1757734401089415&amp;ev=PageView&amp;noscrip
                 hasChanged: function() {
                     if (b.location.hash == "#no-back") {
                         b.location.hash = "#";
-                        b.location.href = "https://manualcreditobarato.com/back-redirect"; //LINK PARA REDIRECIONAR AQUI
+                        b.location.href = ""; //LINK PARA REDIRECIONAR AQUI
                     }
                 },
                 checkCompat: function() {
@@ -218,7 +218,7 @@ src="https://www.facebook.com/tr?id=1757734401089415&amp;ev=PageView&amp;noscrip
                             history.pushState(null, "", "#");
                         } else {
                             b.location.hash = "#";
-                            b.location.href = "https://manualcreditobarato.com/back-redirect"; //LINK PARA REDIRECIONAR AQUI
+                            b.location.href = ""; //LINK PARA REDIRECIONAR AQUI
                         }
                     }
                     a.checkCompat();
@@ -409,7 +409,7 @@ src="https://www.facebook.com/tr?id=1757734401089415&amp;ev=PageView&amp;noscrip
 				<div class="elementor-element elementor-element-a571cd3 elementor-align-center elementor-invisible elementor-widget elementor-widget-button" data-id="a571cd3" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:0}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://go.perfectpay.com.br/PPU38CKFLS2" class="elementor-button-link elementor-button elementor-size-xl" role="button" id="aparecer1">
+			<a href="https://sun.eduzz.com/1057021" class="elementor-button-link elementor-button elementor-size-xl" role="button" id="aparecer1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">EU QUERO TER ACESSO A CRÉDITO BARATO</span>
 		</span>
@@ -1125,7 +1125,7 @@ src="https://www.facebook.com/tr?id=1757734401089415&amp;ev=PageView&amp;noscrip
 				<div class="elementor-element elementor-element-6ff2011 elementor-align-center elementor-invisible elementor-widget elementor-widget-button" data-id="6ff2011" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:0}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://go.perfectpay.com.br/PPU38CKFLS2" class="elementor-button-link elementor-button elementor-size-xl" role="button" id="aparecer2">
+			<a href="https://sun.eduzz.com/1057021" class="elementor-button-link elementor-button elementor-size-xl" role="button" id="aparecer2">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">EU QUERO TER ACESSO A CRÉDITO BARATO</span>
 		</span>
@@ -1147,7 +1147,7 @@ src="https://www.facebook.com/tr?id=1757734401089415&amp;ev=PageView&amp;noscrip
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-79cd1d9 elementor-widget elementor-widget-text-editor" data-id="79cd1d9" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><a href="termos-de-uso/index.html" target="_blank" rel="noopener">Termos de Uso</a>           <a href="politicas-de-privacidade/index.html" target="_blank" rel="noopener">Políticas de Privacidade       </a>   <a href="mailto:contato@manualcreditobarato.com">Contato</a> </p>						</div>
+							<p><a href="termos-de-uso/index.html" target="_blank" rel="noopener">Termos de Uso</a>           <a href="politicas-de-privacidade/index.html" target="_blank" rel="noopener">Políticas de Privacidade       </a>   <a href="mailto:contato@manualcreditobarato.online">Contato</a> </p>						</div>
 				</div>
 					</div>
 		</div>
